--- a/software.html
+++ b/software.html
@@ -11,10 +11,10 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300&display=swap" rel="stylesheet">
-<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body class="index">
+<body>
     <header>
         <img src="/imgs/logo-techniek-college.png" alt="" class="tcrlogo">
         <ul>
@@ -24,10 +24,7 @@
             <li><a href="locatiegids.html" class="navbar">Locatiegids</a></li>
             <li><a href="software.html" class="navbar">software</a></li>
           </ul> 
-          <h1 class="title">Home</h1>
+          <h1 class="title"></h1>
     </header>
-    <div class="square1">bok</div>
-
- 
 </body>
 </html>
