--- a/aboutus.html
+++ b/aboutus.html
@@ -16,14 +16,15 @@
 </head>
 <body>
     <header>
-        <h1 class="title"></h1>
         <img src="/imgs/logo-techniek-college.png" alt="" class="tcrlogo">
         <ul>
             <li><a href="index.html" class="navbar">Home</a></li>
             <li><a href="aboutus.html" class="navbar">About us</a></li>
             <li><a href="BSA.html" class="navbar">BSA</a></li>
             <li><a href="locatiegids.html" class="navbar">Locatiegids</a></li>
+            <li><a href="software.html" class="navbar">software</a></li>
           </ul> 
+          <h1 class="title"></h1>
     </header>
 </body>
 </html>
