--- a/BSA.html
+++ b/BSA.html
@@ -14,7 +14,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <title>Document</title>
 </head>
-<body>
+<body class="otherbody">
     <header>
         <img src="/imgs/logo-techniek-college.png" alt="" class="tcrlogo">
         <ul>
