--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
           </ul> 
           <h1 class="title">Home</h1>
     </header>
-    <div class="square1">bok</div>
+    <div class="square1">welcome to our website, I will tell you about techniek college rotterdam. We are going to talk about us,
+         Joey and Fabio, the BSA, the requirements to continue with this study, the software, the software we use during this 
+        study, and finaly the locationguide. </div>
 
- 
 </body>
 </html>
