--- a/software.html
+++ b/software.html
@@ -14,7 +14,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body class="otherbody">
     <header>
         <img src="/imgs/logo-techniek-college.png" alt="" class="tcrlogo">
         <ul>
@@ -24,7 +24,14 @@
             <li><a href="locatiegids.html" class="navbar">Locatiegids</a></li>
             <li><a href="software.html" class="navbar">software</a></li>
           </ul> 
-          <h1 class="title"></h1>
+          <h1 class="title2">Software</h1>
     </header>
+    <h2 class="titleh2">Visual studio code</h2>
+    <p class="p-software">Visual studio is the program we use most, we use it to write our code in. <br>
+    it is a simple but good program where you can simply save your work in the cloud <br>
+    and you can download extensions to increase the usabillity of the program</p>
+    <h2 class="titleh2">Github</h2>
+    <p class="p-software">Github is a program used to save your files in a cloud where you can also work in a team</p>
+    <h2 class="titleh2"></h2>
 </body>
 </html>
