--- a/aboutus.html
+++ b/aboutus.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,7 +14,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <title>Document</title>
 </head>
-<body>
+<body class="otherbody">
     <header>
         <img src="/imgs/logo-techniek-college.png" alt="" class="tcrlogo">
         <ul>
@@ -23,8 +23,14 @@
             <li><a href="BSA.html" class="navbar">BSA</a></li>
             <li><a href="locatiegids.html" class="navbar">Locatiegids</a></li>
             <li><a href="software.html" class="navbar">software</a></li>
-          </ul> 
-          <h1 class="title"></h1>
+        </ul>
+          <h1 class="title2">About us</h1>
     </header>
+    <h2 class="titleh2">Fabio</h2>
+    <p class="p-software"></p>
+
+    <footer class="footer">
+        <P class="footertext">Techniek College Rotterdam ©</P>
+        </footer>
 </body>
 </html>
