--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -26,8 +26,10 @@
           </ul> 
           <h1 class="title">Home</h1>
     </header>
-    <div class="square1">bok</div>
+    <div class="square1"> <p> Welkom bij onze website voor deze ouderavond. Wij gaan jullie vertellen over de opleiding. wij gaan praten over deze onderwerpen: Over ons, Locatiegids, de BSA, en de software die wij gebruiken.</p></div>
 
- 
+    <footer class="footer">
+        <P class="footertext">Techniek College Rotterdam ©</P>
+        </footer>
 </body>
 </html>
