--- a/locatiegids.html
+++ b/locatiegids.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -19,12 +19,17 @@
         <img src="/imgs/logo-techniek-college.png" alt="" class="tcrlogo">
         <ul>
             <li><a href="index.html" class="navbar">Home</a></li>
-            <li><a href="aboutus.html" class="navbar">About us</a></li>
+            <li><a href="aboutus.html" class="navbar">Over ons</a></li>
             <li><a href="BSA.html" class="navbar">BSA</a></li>
             <li><a href="locatiegids.html" class="navbar">Locatiegids</a></li>
             <li><a href="software.html" class="navbar">software</a></li>
           </ul> 
-          <h1 class="title"></h1>
+          <h1 class="title">Locatiegids</h1>
     </header>
+    <div class="square1"></div>
+
+    <footer class="footer">
+        <P class="footertext">Techniek College Rotterdam ©</P>
+        </footer>
 </body>
 </html>
