--- a/BSA.html
+++ b/BSA.html
@@ -26,7 +26,8 @@
           </ul> 
           <h1 class="title2">BSA</h1>
     </header>
-
+    <a href="/files/07 BSA.pptx" class="alink">De BSA</a> <br>
+    <a href="/files/08 Opleidingswijzer(1).pptx" class="alink">De Opleidingswijzer</a>
     <footer class="footer">
         <P class="footertext">Techniek College Rotterdam ©</P>
         </footer>
