--- a/aboutus.html
+++ b/aboutus.html
@@ -27,7 +27,29 @@
           <h1 class="title2">About us</h1>
     </header>
     <h2 class="titleh2">Fabio</h2>
-    <p class="p-software"></p>
+    <p class="p-software">	Hoe lang is het voor je rijzen <br>
+        a.	Ant: 45-60 min <br>
+        	op welk platform en welke games <br>
+        a.	Ant: pc, FPS games <br>
+        	Op welke game heb je de meeste uren <br>
+        a.	Ant: Rainbow six siege <br>
+        	Wat gaf jouw de aanleiding tot het kiezen van deze opleiding <br>
+        a.	Ant: ik vind coderen leuk <br>
+        	Heb je voorde rest nog ander hobby's <br>
+        a.	Ant: boxen, anime kijken <br>
+        	Had je voor de opleiding al ervaring met coderen <br>
+        a.	Ant: heel klein beetje <br>
+        	Volg je bepaalde sporten <br>
+        a.	Ant: nog niet, ik wil boxen <br>
+        	Wat is je gametag en waar komt deze vandaan <br>
+        a.	Ant: Fabio_Sbar, mijn voornaam, S voor mijn achternaam, bar voor barendrecht <br>
+        	Van welke soort muziek hou je <br>
+        a.	Ant: Amerikaanse rap, GEEN mumblerap <br>
+        	Wat is je Woonplaats en hoelang woon je er al <br>
+        a.	Ant: barendrecht, 16 jaar lang <br>
+        	Heb je huisdieren <br>
+        a.	Ant: ik heb een parkiet <br>
+         <br> </p>
 
     <footer class="footer">
         <P class="footertext">Techniek College Rotterdam ©</P>
