--- a/locatiegids.html
+++ b/locatiegids.html
@@ -26,7 +26,7 @@
           </ul> 
           <h1 class="title">Locatiegids</h1>
     </header>
-    <div class="square1"></div>
+    <div class="square1"><a href="https://techniekcollegerotterdam-production-images-s3bucket.s3.eu-central-1.amazonaws.com/ntqh3hz0cbdupr4y9ql6rx40yoz7?response-content-disposition=inline%3B%20filename%3D%22Locatiegids%20Sportlaan%2022-23.pdf%22%3B%20filename%2A%3DUTF-8%27%27Locatiegids%2520Sportlaan%252022-23.pdf&response-content-type=application%2Fpdf&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIA345T7DJ3BXOCWR46%2F20221018%2Feu-central-1%2Fs3%2Faws4_request&X-Amz-Date=20221018T153623Z&X-Amz-Expires=300&X-Amz-SignedHeaders=host&X-Amz-Signature=4a054151ff2b0826875feba42e3c11796cc8e257895650425a657c3c2c6850d5" target="_blank" rel="noopener noreferrer" class="alink">Locatiegids</a></div>
 
     <footer class="footer">
         <P class="footertext">Techniek College Rotterdam ©</P>
