--- a/software.html
+++ b/software.html
@@ -32,7 +32,7 @@
     and you can download extensions to increase the usabillity of the program</p>
     <h2 class="titleh2">Github</h2>
     <p class="p-software">Github is a program used to save your files in a cloud where you can also work in a team</p>
-<<<<<<< HEAD
+
     <h2 class="titleh2">trello</h2>
     <p class="p-software">trello is een programma waarbij je kan plannen wat je gaat doen en wat je al heb gedaan</p>
     <h2 class="titleh2">Figma</h2>
@@ -41,13 +41,10 @@
     <p class="p-software">Canvas is de software die wij gebruiken om al ons werk in te leveren en waar ook de <br>
          informatie staat over de opdrachten zelf.</p>
     <h2 class="titleh2">Eduarte</h2>
-    <p></p>
+    <p class="p-software">Eduarte is het programma waar wij ons rooster op zien.</p>
     
     <footer class="footer">
     <P class="footertext">Techniek College Rotterdam ©</P>
     </footer>
-=======
-    <h2 class="titleh2"></h2>
->>>>>>> 85b2724d8964f959e5cb85ce436d33a5e6716c18
 </body>
 </html>
